; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exi.c_EXI_Detach.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exi.c_EXI_Detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@eximap = common dso_local global %struct.TYPE_3__* null, align 8
@EXI_FLAG_ATTACH = common dso_local global i32 0, align 4
@EXI_FLAG_LOCKED = common dso_local global i32 0, align 4
@EXI_DEVICE_0 = common dso_local global i64 0, align 8
@IRQ_EXI0_EXI = common dso_local global i32 0, align 4
@IRQ_EXI0_TC = common dso_local global i32 0, align 4
@IRQ_EXI0_EXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @EXI_Detach(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  store i64 %0, i64* %2, align 8
  store i64 1, i64* %4, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** @eximap, align 8
  %7 = load i64, i64* %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i64 %7
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %5, align 8
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @_CPU_ISR_Disable(i32 %9)
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @EXI_FLAG_ATTACH, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %51

17:                                               ; preds = %1
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = load i32, i32* @EXI_FLAG_LOCKED, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %17
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @EXI_DEVICE_0, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %31

30:                                               ; preds = %24
  store i64 0, i64* %4, align 8
  br label %50

31:                                               ; preds = %24, %17
  %32 = load i32, i32* @EXI_FLAG_ATTACH, align 4
  %33 = xor i32 %32, -1
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = and i32 %36, %33
  store i32 %37, i32* %35, align 8
  %38 = load i32, i32* @IRQ_EXI0_EXI, align 4
  %39 = call i64 @IRQMASK(i32 %38)
  %40 = load i32, i32* @IRQ_EXI0_TC, align 4
  %41 = call i64 @IRQMASK(i32 %40)
  %42 = or i64 %39, %41
  %43 = load i32, i32* @IRQ_EXI0_EXT, align 4
  %44 = call i64 @IRQMASK(i32 %43)
  %45 = or i64 %42, %44
  %46 = load i64, i64* %2, align 8
  %47 = mul i64 %46, 3
  %48 = lshr i64 %45, %47
  %49 = call i32 @__MaskIrq(i64 %48)
  br label %50

50:                                               ; preds = %31, %30
  br label %51

51:                                               ; preds = %50, %1
  %52 = load i32, i32* %3, align 4
  %53 = call i32 @_CPU_ISR_Restore(i32 %52)
  %54 = load i64, i64* %4, align 8
  ret i64 %54
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @__MaskIrq(i64) #1

declare dso_local i64 @IRQMASK(i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
